# ghcup-gtk

./: CHANGELOG.md  Makefile  README.md  cabal.project  cabal.project.freeze  fourmolu.yaml  ghc-tags.yaml  ghcup-gtk.cabal
.github/: mergify.yml
.github/workflows/: ci.yml  linting.yml  setup_ci_env.sh
app/: Main.hs
src/: UI.hs
src/Driver/: GHCup.hs
src/UI/: Compiler.hs  GHCup.hs  HeaderBar.hs  Install.hs  PreferencesWindow.hs
ui/: menu.ui
